添加了1176f(x) = |x|的图像

--- a/2024秋_高数A/AM2024.md
+++ b/2024秋_高数A/AM2024.md
@@ -1169,7 +1169,7 @@ vlook-query: ws=off
 > > 
 > >  $f(x)$ 在 $(-\infty, +\infty)$ 上连续.
 > > 
-> > [补充函数图像]
+> > ![](media/img/123x.jpg)
 > 
 > > **例2: $\displaystyle f(x) = \frac{1}{|x|}$**
 > > 
